[package]
name = "botnet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
shlex = "1.2.0"
tokio = { version = "1.34.0", features = ["full"] }

[[bin]]
name="client"
path="src/client/client.rs"
